# anas-wbl

./: .gitignore  CREDITS_REFRESH_SOLUTION.md  DEPLOYMENT_GUIDE.md  README.md  TODO.md  corrected_agent_api.sh  debug_history_outbound.json  package-lock.json  package.json
ai_agent/: .env-example  API.md  README.md  requirements.txt  server.py
ai_agent/local_setup/: docker-compose.yml
client/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  zenvoice_client.sh
client/.next/: app-build-manifest.json  trace
client/public/: aivoco.html  robots.txt  sitemap.xml
client/src/: middleware.ts
public/: test.html
server/: .env-cloud  .env.example  PAYU_IMPLEMENTATION.md  README.md  del  package-lock.json  package.json  payment-response  server.js  zenvoice_server.sh
ui/: package-lock.json
voice_agent/: .dockerignore  .env.example  .pyproject.toml.swp  Dockerfile.agent  Dockerfile.dispatcher  README.md  docker-compose.yml  generate_dev_doc.py  generate_token.py  inbound.json  pyproject.toml  test_tool_load.py
voice_agent/agents/: .env-cloud  .env.example  .env.local  agent.py  debug_history_outbound.json  diagnostic_agent.py  inbound_agent.py  outbound_agent.py  outbound_agent.sh  session_config.py
voice_agent/agents/shared/: __init__.py  config.py  gemini_tool_call_fix.py  handlers.py  providers.py  telemetry.py
voice_agent/call_dispatcher_backend/: main.py
voice_agent/telephony_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
zenvoice-web-call/: pyproject.toml
(+366 files in other folders)
