[project]
name = "telephony-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[azure,cartesia,deepgram,elevenlabs,google,groq,lmnt,openai,sarvam,silero,turn-detector]~=1.3.10",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "fastapi[all]",
    "openai>=2.0",
]
