[project]
name = "telephony-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[azure,deepgram,google,groq,lmnt,openai,sarvam,silero]~=1.3.10",
    "python-dotenv",
    "fastapi[all]",
    "openai>=2.0",
    "pymupdf4llm>=0.0.17",
]

[tool.setuptools.packages.find]
include = ["agents*", "call_dispatcher_backend*"]
