[project]
name = "telephony-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[aws,azure,deepgram,elevenlabs,google,groq,lmnt,openai,sarvam,silero]>=1.4.0",
    "livekit-plugins-aws[realtime]",
    "python-dotenv",
    "fastapi[all]",
    "openai>=2.0",
    "pymupdf4llm>=0.0.17",
    "reportlab>=4.4.10",
]

[tool.setuptools.packages.find]
include = ["agents*", "call_dispatcher_backend*"]
